--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build --base /pt-destroying-software",
+    "build": "slidev build",
     "dev": "slidev",
     "export": "slidev export"
   },
